--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Ahsan-Zaidi.github.io/react-profile/",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0"
   }
 }
